Issue #82 payload too large (#83)
* Added traces to investigate the issue

Signed-off-by: Alessio <slux83@gmail.com>

* Working on it

Signed-off-by: Alessio <slux83@gmail.com>

* tuning

Signed-off-by: Alessio <slux83@gmail.com>

* This should fix the issue

Signed-off-by: Alessio <slux83@gmail.com>

---------

Signed-off-by: Alessio <slux83@gmail.com>
Co-authored-by: Alessio <slux83@gmail.com>